disk based implementation v7